--- a/index.html
+++ b/index.html
@@ -130,30 +130,43 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
     
 <hr>
 
-<section id="aulas" class="third-section sr">
-  <h2 class="title text-center mb-8 text-black">Aulas de Programação</h2>
-  <div class="owl-carousel owl-theme project-grid">
-    <!-- Aula 1 -->
-    <div class="item bg-gray-100 p-4 rounded-lg">
-      <div class="project">
-        <div class="project-description">
-          <h3 class="text-lg font-bold mb-2">Introdução à Programação</h3>
-          <p class="text-black">Aprenda os fundamentos da programação e desenvolva suas habilidades.</p>
-        </div>
-      </div>
-    </div>
-    <!-- Aula 2 -->
-    <div class="item bg-gray-100 p-4 rounded-lg">
-      <div class="project">
-        <div class="project-description">
-          <h3 class="text-lg font-bold mb-2">Desenvolvimento Web</h3>
-          <p class="text-black">Explore as tecnologias web modernas e crie sites interativos e responsivos.</p>
-        </div>
-      </div>
-    </div>
-    <!-- Outras aulas aqui... -->
+<div class="aulas" id="aulas">
+  <div class="aulas_title">
+  <h2>Aulas de Programação</h2>
+  <p>Aprenda diversos tópicos fundamentais e avançados em programação com minhas aulas.</p> 
   </div>
-</section>
+  <div class="aulas_list">
+    <div class="aula">
+      <div class="aula_content">
+        <i class="fas fa-code"></i>
+        <p>Introdução à Programação</p>
+        <p>Fundamentos da programação e desenvolvimento de habilidades.</p>
+      </div>
+    </div>
+    <div class="aula">
+      <div class="aula_content">
+        <i class="fas fa-paint-brush"></i>
+        <p>Desenvolvimento Web</p>
+        <p>Tecnologias web modernas e criação de sites interativos.</p>
+      </div>
+    </div>
+    <div class="aula">
+      <div class="aula_content">
+        <i class="fas fa-mobile-alt"></i>
+        <p>Aplicativos Móveis</p>
+        <p>Desenvolvimento de aplicativos móveis responsivos.</p>
+      </div>
+    </div>
+    <div class="aula">
+      <div class="aula_content">
+        <i class="fas fa-chalkboard-teacher"></i>
+        <p>Projetos</p>
+        <p>Desenvolvimento de projetos práticos para aplicar os conhecimentos adquiridos.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
     
 <section id="projects" class="third-section sr">
 <h2 class="title">Projetos</h2>
