--- a/index.html
+++ b/index.html
@@ -132,10 +132,9 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 
 <div class="aulas" id="aulas">
   <div class="aulas_title">
-  <h2>Aulas de Programação</h2>
-  <p>Aprenda diversos tópicos fundamentais e avançados em programação com minhas aulas.</p> 
+    <h2>Aulas de Programação</h2>
   </div>
-  <div class="aulas_list">
+  <div class="servs bg-white p-4 rounded-lg">
     <div class="aula">
       <div class="aula_content">
         <i class="fas fa-code"></i>
