--- a/index.html
+++ b/index.html
@@ -129,6 +129,44 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
 </section>
     
 <hr>
+
+
+     <div class="services" id="services">
+        <div class="service_title">
+            <h2>Aulas</h2>
+        </div>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="service_content">
+                    <i class="fas fa-laptop-code"></i>
+                    <p>Introdução à Programação</p>
+                    <p>Aprenda os conceitos básicos de programação e como criar páginas web com HTML, estilizá-las com CSS e adicionar interatividade com JavaScript.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="service_content">
+                    <i class="fas fa-file-code"></i>
+                    <p>Linguagens Web: HTML, CSS e JavaScript</p>
+                    <p>Domine as linguagens fundamentais da web: HTML para estrutura, CSS para estilização e JavaScript para interatividade.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="service_content">
+                    <i class="fab fa-bootstrap"></i>
+                    <p>Bootstrap</p>
+                    <p>Explore o framework Bootstrap para desenvolver sites responsivos e estilizados de forma rápida e eficiente.</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="service_content">
+                    <i class="fab fa-react"></i>
+                    <p>React JS</p>
+                    <p>Aprenda a construir interfaces de usuário interativas e dinâmicas com React JS, uma das bibliotecas JavaScript mais populares.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
 <section id="projects" class="third-section sr">
 <h2 class="title">Projetos</h2>
