--- a/index.html
+++ b/index.html
@@ -140,14 +140,19 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
                 <div class="service_content">
                     <i class="fas fa-laptop-code"></i>
                     <p>Introdução à Programação</p>
-                    <p>Aprenda os conceitos básicos de programação e como criar páginas web com HTML, estilizá-las com CSS e adicionar interatividade com JavaScript.</p>
+                    <p>Aprenda os conceitos básicos de programação.</p>
                 </div>
             </div>
             <div class="item">
                 <div class="service_content">
                     <i class="fas fa-file-code"></i>
-                    <p>Linguagens Web: HTML, CSS e JavaScript</p>
-                    <p>Domine as linguagens fundamentais da web: HTML para estrutura, CSS para estilização e JavaScript para interatividade.</p>
+                    <p>Linguagens Web</p>
+                    <p>Domine as linguagens fundamentais da web.</p>
+                    <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    </ul>
                 </div>
             </div>
             <div class="item">
