--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
                 <div class="service_content">
                     <i class="fab fa-bootstrap"></i>
                     <p>Bootstrap</p>
-                    <p>Explore o framework Bootstrap para desenvolver sites responsivos e estilizados de forma rápida e eficiente.</p>
+                    <p>Domine o framework Bootstrap.</p>
                 </div>
             </div>
             <div class="item">
                 <div class="service_content">
                     <i class="fab fa-react"></i>
                     <p>React JS</p>
-                    <p>Aprenda a construir interfaces de usuário interativas e dinâmicas com React JS, uma das bibliotecas JavaScript mais populares.</p>
+                    <p>Aprenda a construir interfaces com React JS.p>
                 </div>
             </div>
         </div>
