--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Também tenho experiência em compartilhar meu conhecimento como instrutor, ajud
                 <div class="service_content">
                     <i class="fab fa-react"></i>
                     <p>React JS</p>
-                    <p>Aprenda a construir interfaces com React JS.p>
+                    <p>Aprenda a construir interfaces com React JS.</p>
                 </div>
             </div>
         </div>
