--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 <p><img src="./html.png" alt="HTML" style="width: 40px; height: 40px;" title="HTML"></p>
 <p><img src="./css.png" alt="CSS" style="width: 40px; height: 40px;" title="CSS"></p>
 <p><img src="./js.png" alt="JavaScript" style="width: 55px; height: 55px;" title="JavaScript"></p>
+<p><img src="./typescript.png" alt="TypeScript" style="width: 40px; height:40px;" title="TypeScript"></p>
 <p><img src="./bootstrap.png" alt="Bootstrap" style="width: 40px; height: 40px;" title="BootStrap"></p>
 <p><img src="./react (2).png" alt="React JS" style="width: 40px; height: 40px;" title="React JS"></p>
 <p><img src="./ionic.png" alt="Ionic" style="width:40px; height:40px;" title="Ionic"></p>
+<p><img src="./tailwind css.png" alt="Tailwind CSS" style="width:40px; height: 40px; border-radius:5px;" title="Tailwind CSS"></p>
 <p><img src="./github.png" alt="GitHub" style="width: 40px; height: 40px;" title="GitHub"></p>
 <p><img src="./git.png" alt="Git" style="width: 40px; height: 40px;" title="Git"></p>
 </div>
