--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Feito com HTML e CSS</p>
 <img src="usuário.jpg" alt="#">
 <p class="nome-usuario">Bernardo Nunes</p>
 <div class="depoimento-description">
-<p>Um ótimo professor, me ajudou muito no início da minha carreira, eu mal sabia o que era HTML, CSS ou como usar, e ainda tinha os trabalhos da faculdade, com a ajuda do Felipe, além de eu conseguir entender com facilidade, consegui evoluir muito nos estudos, se tivesse que indicar alguém, sem sombra de dúvidas, seria ele.</p>
+<p>Felipe foi um professor incrível que me ajudou a compreender HTML e CSS, impulsionando meu desenvolvimento acadêmico e profissional. <br>Sem dúvida, o recomendaria sem hesitar.</p>
 </div>
 </div>
 </div>
@@ -315,7 +315,7 @@ Feito com HTML e CSS</p>
 <img src="usuario2.jpg" alt="#">
 <p class="nome-usuario">Mario Sergio</p>
 <div class="depoimento-description">
-<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. Seria um ótimo parceiro de negócios!</p>
+<p>Pelo pouco tempo que conheço Felipe, ele me parece ser uma pessoa dedicada, determinada e prestativo, sempre disposto a ajudar quando pode. <br>Seria um ótimo parceiro de negócios!</p>
 </div>
 </div>
 </div>
@@ -324,7 +324,7 @@ Feito com HTML e CSS</p>
 <img src="usuario3.jpg" alt="#">
 <p class="nome-usuario">Dayanny Siqueira</p>
 <div class="depoimento-description">
-<p>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. Além de estimular e focar em cada um. Super indico e recomendo o Professor Felipe!</p>
+<p>Excelente ensino! É descontraído, paciente e sempre bem humorado, deixando o aluno à vontade. <br>Além de estimular e focar em cada um! <br>Super indico e recomendo o Professor Felipe!</p>
 </div>
 </div>
 </div>
@@ -351,9 +351,7 @@ Feito com HTML e CSS</p>
 <img src="usuario6.jpg" alt="#">
 <p class="nome-usuario">Dolores Oliveira</p>
 <div class="depoimento-description">
-<p>Seu compromisso com a excelência e sua capacidade de superar desafios são verdadeiramente admirável uma pessoa incrível! Um
-  programador, que posso dizer com toda clareza possui resolução de problemas, pensamento lógico e capacidade de aprender novas tecnologias. Além de possuir, habilidades de comunicação, trabalho em equipe e capacidade de lidar com prazos. Estudar teoria e buscar oportunidades de aprendizado.
-  Uma honra trabalhar com você!</p>
+<p>Sua dedicação à excelência é admirável! <br>Como programador, você tem habilidades excepcionais em resolver problemas, pensamento lógico e prontidão para aprender. Além disso, suas habilidades de comunicação, trabalho em equipe e gestão de prazos são notáveis. <br>Uma honra trabalhar com você!</p>
 </div>
 </div>
 </div>
